# NLP-Practice

./: .gitignore  main.py  pyproject.toml  python_crash.ipynb  requirements.txt
