[project]
name = "nlp-course"
version = "1.0.0"
description = "Environment for Intro to NLP course"
dependencies = [
    # Core data science
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "jupyter>=1.0.0",
    "notebook>=6.0.0",

    # Traditional NLP
    "nltk>=3.8.0",
    "scikit-learn>=1.3.0",

    # Modern NLP
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "datasets>=2.12.0",
    "tokenizers>=0.15.0",

    # Text processing
    "spacy>=3.7.0",
    "beautifulsoup4>=4.12.0",  # For web scraping
    "requests>=2.31.0",        # For API calls

    # Utilities
    "tqdm>=4.65.0",
    "ipywidgets>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "ruff>=0.1.0",
    "pytest>=7.0.0",
    "pre-commit>=3.0.0"
]

full = [
    "textblob>=0.17.0",
    "gensim>=4.3.0",
    "wordcloud>=1.9.0",
    "streamlit>=1.28.0"
]